--- a/lang/ar.json
+++ b/lang/ar.json
@@ -24,12 +24,12 @@
     "+ prefix": "+ البادئة",
     "+ pronoun": "+ ضمير",
     "+ suffix": "+ لاحقة",
-    ":count contact|:count contacts": ":count جهة اتصال|:count جهة اتصال",
-    ":count hour slept|:count hours slept": ":count ساعة نوم|:count ساعة نوم",
+    ":count contact|:count contacts": ":count اتصال|:count اتصالات|:count جهات اتصال|:count اتصالات|:count جهة اتصال",
+    ":count hour slept|:count hours slept": ":count ساعة نوم|:count ساعة نمت|:count ساعة نمت|:count ساعات نوم|:count ساعة نوم",
     ":count min read": ":count دقيقة قراءة",
-    ":count post|:count posts": ":count مشاركة|:count مشاركة",
-    ":count template section|:count template sections": ":count قسم القالب|:count أقسام القالب",
-    ":count word|:count words": ":count كلمة|:count كلمة",
+    ":count post|:count posts": ":count مشاركة|:count مشاركة|:count مشاركات|:count مشاركات|:count مشاركة",
+    ":count template section|:count template sections": ":count قسم القالب|:count أقسام القالب|:count أقسام القالب|:count أقسام القالب|:count قسم القالب",
+    ":count word|:count words": ":count كلمة|:count كلمة|:count كلمات|:count كلمات|:count كلمة",
     ":distance km": ":distance كم",
     ":distance miles": ":distance ميل",
     ":file at line :line": ":file في السطر :line",
@@ -763,7 +763,7 @@
     "Rabbit": "أرنب",
     "Ran": "جرى",
     "Rat": "فأر",
-    "Read :count time|Read :count times": "اقرأ :count مرة|اقرأ :count مرة",
+    "Read :count time|Read :count times": "إقرأ :count مرة|اقرأ :count مرات|اقرأ :count مرات|اقرأ :count مرات|اقرأ :count مرة",
     "Record a loan": "سجل القرض",
     "Record your mood": "سجل حالتك المزاجية",
     "Recovery Code": "رمز الاسترداد",
@@ -853,7 +853,7 @@
     "Sign in to your account": "تسجيل الدخول إلى حسابك",
     "Sign up for an account": "التسجيل للحصول على حساب",
     "Sikh": "السيخ",
-    "Slept :count hour|Slept :count hours": "نمت :count ساعة|نمت :count ساعة",
+    "Slept :count hour|Slept :count hours": "ينام :count ساعة|نمت :count ساعة|نمت :count ساعة|نمت :count ساعات|نمت :count ساعة",
     "Slice of life": "شريحة من الحياة",
     "Slices of life": "شرائح من الحياة",
     "Small animal": "الحيوانات الصغيرة",
