--- a/lang/bn.json
+++ b/lang/bn.json
@@ -24,10 +24,10 @@
     "+ prefix": "+ উপসর্গ",
     "+ pronoun": "+ সর্বনাম",
     "+ suffix": "+ প্রত্যয়",
-    ":count contact|:count contacts": ":count পরিচিতি|:countটি পরিচিতি৷",
-    ":count hour slept|:count hours slept": ":count ঘণ্টা ঘুমালো|:count ঘণ্টা ঘুমালো",
+    ":count contact|:count contacts": ":count পরিচিতি|:count পরিচিতি",
+    ":count hour slept|:count hours slept": ":count ঘণ্টা ঘুমিয়েছি|:count ঘন্টা ঘুমানো",
     ":count min read": ":count মিনিট পড়া",
-    ":count post|:count posts": ":countটি পোস্ট|:countটি পোস্ট৷",
+    ":count post|:count posts": ":countটি পোস্ট|:count পোস্ট",
     ":count template section|:count template sections": ":count টেমপ্লেট বিভাগ|:count টেমপ্লেট বিভাগ",
     ":count word|:count words": ":count শব্দ|:count শব্দ",
     ":distance km": ":distance কিমি",
@@ -765,7 +765,7 @@
     "Rabbit": "খরগোশ",
     "Ran": "দৌড়ে গেল",
     "Rat": "ইঁদুর",
-    "Read :count time|Read :count times": ":count বার পড়ুন|পড়ুন :count বার",
+    "Read :count time|Read :count times": ":count বার পঠিত|:count বার পঠিত",
     "Record a loan": "একটি ঋণ রেকর্ড",
     "Record your mood": "আপনার মেজাজ রেকর্ড করুন",
     "Recovery Code": "রিকভারি কোড",
@@ -855,7 +855,7 @@
     "Sign in to your account": "আপনার অ্যাকাউন্টে সাইন ইন করুন",
     "Sign up for an account": "অ্যাকাউন্ট খুলুন",
     "Sikh": "শিখ",
-    "Slept :count hour|Slept :count hours": "ঘুমান :count ঘণ্টা|ঘুম :count ঘণ্টা",
+    "Slept :count hour|Slept :count hours": ":count ঘণ্টা ঘুমিয়েছেন|:count ঘন্টা ঘুমিয়েছে",
     "Slice of life": "এক খন্ড জীবন",
     "Slices of life": "জীবনের টুকরো টুকরো",
     "Small animal": "ছোট প্রাণী",
