--- a/lang/ca.json
+++ b/lang/ca.json
@@ -25,7 +25,7 @@
     "+ pronoun": "+ pronom",
     "+ suffix": "+ sufix",
     ":count contact|:count contacts": ":count contacte|:count contactes",
-    ":count hour slept|:count hours slept": ":count hores dormides|:count hores dormides",
+    ":count hour slept|:count hours slept": ":count hora dormida|:count hores dormides",
     ":count min read": ":count minuts de lectura",
     ":count post|:count posts": ":count publicació|:count publicacions",
     ":count template section|:count template sections": ":count secció de plantilla|:count seccions de plantilla",
@@ -765,7 +765,7 @@
     "Rabbit": "Conill",
     "Ran": "Ran",
     "Rat": "rata",
-    "Read :count time|Read :count times": "Llegir :count vegades|Llegir :count vegades",
+    "Read :count time|Read :count times": "Llegeix :count vegada|Llegit :count vegades",
     "Record a loan": "Gravar un préstec",
     "Record your mood": "Registra el teu estat d’ànim",
     "Recovery Code": "Codi de recuperació",
@@ -855,7 +855,7 @@
     "Sign in to your account": "Inicieu la sessió al vostre compte",
     "Sign up for an account": "Registreu-vos per obtenir un compte",
     "Sikh": "Sikh",
-    "Slept :count hour|Slept :count hours": "He dormit :count hores|He dormit :count hores",
+    "Slept :count hour|Slept :count hours": "Ha dormit :count hora|He dormit :count hores",
     "Slice of life": "Troç de vida",
     "Slices of life": "Trossets de vida",
     "Small animal": "Animal petit",
