--- a/lang/da.json
+++ b/lang/da.json
@@ -765,7 +765,7 @@
     "Rabbit": "Kanin",
     "Ran": "Løb",
     "Rat": "Rotte",
-    "Read :count time|Read :count times": "Læs :count gang|Læs :count gange",
+    "Read :count time|Read :count times": "Læs :count gang|Læst :count gange",
     "Record a loan": "Optag et lån",
     "Record your mood": "Optag dit humør",
     "Recovery Code": "Gendannelseskode",
