--- a/lang/de.json
+++ b/lang/de.json
@@ -765,7 +765,7 @@
     "Rabbit": "Kaninchen",
     "Ran": "Ran",
     "Rat": "Ratte",
-    "Read :count time|Read :count times": ":count mal lesen|:count mal lesen",
+    "Read :count time|Read :count times": ":count Mal lesen|:count Mal gelesen",
     "Record a loan": "Nehmen Sie einen Kredit auf",
     "Record your mood": "Zeichnen Sie Ihre Stimmung auf",
     "Recovery Code": "Wiederherstellungscode",
