--- a/lang/el.json
+++ b/lang/el.json
@@ -25,9 +25,9 @@
     "+ pronoun": "+ αντωνυμία",
     "+ suffix": "+ επίθημα",
     ":count contact|:count contacts": ":count επαφή|:count επαφές",
-    ":count hour slept|:count hours slept": ":count ώρα ύπνου|:count ώρες ύπνου",
+    ":count hour slept|:count hours slept": ":count ώρα ύπνος|:count ώρες ύπνου",
     ":count min read": ":count λεπτά ανάγνωσης",
-    ":count post|:count posts": ":count ανάρτηση|:count αναρτήσεις",
+    ":count post|:count posts": ":count ανάρτηση|:count δημοσιεύσεις",
     ":count template section|:count template sections": ":count ενότητα προτύπου|:count ενότητες προτύπου",
     ":count word|:count words": ":count λέξη|:count λέξεις",
     ":distance km": ":distance χλμ",
@@ -765,7 +765,7 @@
     "Rabbit": "Κουνέλι",
     "Ran": "Ετρεξα",
     "Rat": "Αρουραίος",
-    "Read :count time|Read :count times": "Ανάγνωση :count φορά|Διαβάστηκε :count φορές",
+    "Read :count time|Read :count times": "Διαβάστε :count φορά|Διαβάστε :count φορές",
     "Record a loan": "Καταγράψτε ένα δάνειο",
     "Record your mood": "Καταγράψτε τη διάθεσή σας",
     "Recovery Code": "Κωδικός ανάκτησης",
@@ -855,7 +855,7 @@
     "Sign in to your account": "Συνδεθείτε στο λογαριασμό σας",
     "Sign up for an account": "Εγγραφείτε για λογαριασμό",
     "Sikh": "Σιχ",
-    "Slept :count hour|Slept :count hours": "Ύπνος :count ώρα|Κοιμής :count ώρες",
+    "Slept :count hour|Slept :count hours": "Κοιμήθηκε :count ώρα|Κοιμήθηκε :count ώρες",
     "Slice of life": "Κομμάτι της ζωής",
     "Slices of life": "Φέτες ζωής",
     "Small animal": "Μικρό ζώο",
