--- a/lang/es.json
+++ b/lang/es.json
@@ -25,7 +25,7 @@
     "+ pronoun": "+ pronombre",
     "+ suffix": "+ sufijo",
     ":count contact|:count contacts": ":count contacto|:count contactos",
-    ":count hour slept|:count hours slept": ":count hora dormida|:count horas dormida",
+    ":count hour slept|:count hours slept": ":count hora dormida|:count horas dormidas",
     ":count min read": ":count lectura mínima",
     ":count post|:count posts": ":count publicación|:count publicaciones",
     ":count template section|:count template sections": ":count sección de plantilla|:count secciones de plantilla",
