--- a/lang/fr.json
+++ b/lang/fr.json
@@ -24,12 +24,12 @@
     "+ prefix": "+ préfixe",
     "+ pronoun": "+ pronom",
     "+ suffix": "+ suffixe",
-    ":count contact|:count contacts": ":count contact|:count contact",
-    ":count hour slept|:count hours slept": ":count heures de sommeil|:count heures de sommeil",
+    ":count contact|:count contacts": ":count contact|:count contacts",
+    ":count hour slept|:count hours slept": ":count heure de sommeil|:count heures de sommeil",
     ":count min read": ":count minutes de lecture",
-    ":count post|:count posts": ":count messages|:count messages",
+    ":count post|:count posts": ":count message|:count messages",
     ":count template section|:count template sections": ":count section de modèle|:count sections de modèle",
-    ":count word|:count words": ":count mot|:count mots",
+    ":count word|:count words": ":count mot|:count mots",
     ":distance km": ":distance km",
     ":distance miles": ":distance milles",
     ":file at line :line": ":file à la ligne :line",
@@ -765,7 +765,7 @@
     "Rabbit": "Lapin",
     "Ran": "Couru",
     "Rat": "Rat",
-    "Read :count time|Read :count times": "Lire :count fois|Lire :count fois",
+    "Read :count time|Read :count times": "Lu :count fois|Lu :count fois",
     "Record a loan": "Enregistrer un prêt",
     "Record your mood": "Enregistrez votre humeur",
     "Recovery Code": "Code de récupération",
@@ -855,7 +855,7 @@
     "Sign in to your account": "Connectez-vous à votre compte",
     "Sign up for an account": "Créer un compte",
     "Sikh": "Sikh",
-    "Slept :count hour|Slept :count hours": "J’ai dormi :count heure|J’ai dormi :count heures",
+    "Slept :count hour|Slept :count hours": "A dormi :count heure|A dormi :count heures",
     "Slice of life": "Tranche de vie",
     "Slices of life": "Tranches de vie",
     "Small animal": "Petit animal",
