--- a/lang/he.json
+++ b/lang/he.json
@@ -24,11 +24,11 @@
     "+ prefix": "+ קידומת",
     "+ pronoun": "+ כינוי",
     "+ suffix": "+ סיומת",
-    ":count contact|:count contacts": ":count איש קשר|:count אנשי קשר",
-    ":count hour slept|:count hours slept": ":count שעות שינה|:count שעות שינה",
+    ":count contact|:count contacts": "איש קשר :count|:count אנשי קשר",
+    ":count hour slept|:count hours slept": ":count שעה שינה|:count שעות שינה",
     ":count min read": ":count דקות קריאה",
-    ":count post|:count posts": ":count פוסט|:count פוסטים",
-    ":count template section|:count template sections": ":count קטע תבנית|:count קטעי תבנית",
+    ":count post|:count posts": "פוסט :count|:count פוסטים",
+    ":count template section|:count template sections": "קטע תבנית :count|:count קטעי תבנית",
     ":count word|:count words": ":count מילה|:count מילים",
     ":distance km": ":distance ק\"מ",
     ":distance miles": ":distance מיילים",
@@ -765,7 +765,7 @@
     "Rabbit": "ארנב",
     "Ran": "רץ",
     "Rat": "עכברוש",
-    "Read :count time|Read :count times": "קרא :count פעם|קרא :count פעמים",
+    "Read :count time|Read :count times": "קרא פעם :count|קרא :count פעמים",
     "Record a loan": "רשום הלוואה",
     "Record your mood": "רשום את מצב הרוח שלך",
     "Recovery Code": "קוד שחזור",
@@ -855,7 +855,7 @@
     "Sign in to your account": "תתחבר לחשבון שלך",
     "Sign up for an account": "תירשם בשביל חשבון",
     "Sikh": "סיקי",
-    "Slept :count hour|Slept :count hours": "שינה :count שעה|ישן :count שעות",
+    "Slept :count hour|Slept :count hours": "ישן :count שעה|ישן :count שעות",
     "Slice of life": "פרוסת חיים",
     "Slices of life": "פרוסות חיים",
     "Small animal": "חיה קטנה",
