--- a/lang/it.json
+++ b/lang/it.json
@@ -27,8 +27,8 @@
     ":count contact|:count contacts": ":count contatto|:count contatti",
     ":count hour slept|:count hours slept": ":count ora di sonno|:count ore di sonno",
     ":count min read": ":count minuti di lettura",
-    ":count post|:count posts": ":count post|:count post",
-    ":count template section|:count template sections": ":count sezione del modello|:count sezioni del modello",
+    ":count post|:count posts": ":count messaggio|:count post",
+    ":count template section|:count template sections": ":count sezione modello|:count sezioni del modello",
     ":count word|:count words": ":count parola|:count parole",
     ":distance km": ":distance km",
     ":distance miles": ":distance miglia",
@@ -765,7 +765,7 @@
     "Rabbit": "Coniglio",
     "Ran": "Corso",
     "Rat": "Ratto",
-    "Read :count time|Read :count times": "Leggi :count volta|Leggi :count volte",
+    "Read :count time|Read :count times": "Leggi :count volta|Letto :count volte",
     "Record a loan": "Registra un prestito",
     "Record your mood": "Registra il tuo umore",
     "Recovery Code": "Codice di ripristino",
