--- a/lang/ja.json
+++ b/lang/ja.json
@@ -24,12 +24,12 @@
     "+ prefix": "+ 接頭辞",
     "+ pronoun": "+代名詞",
     "+ suffix": "+ サフィックス",
-    ":count contact|:count contacts": ":count 人の連絡先|:count 人の連絡先",
-    ":count hour slept|:count hours slept": ":count 時間の睡眠|:count 時間の睡眠",
+    ":count contact|:count contacts": ":count 連絡先",
+    ":count hour slept|:count hours slept": "睡眠時間:count時間",
     ":count min read": ":count 分で読みました",
-    ":count post|:count posts": ":count 件の投稿|:count 件の投稿",
-    ":count template section|:count template sections": ":count テンプレート セクション|:count テンプレート セクション",
-    ":count word|:count words": ":count 語|:count 語",
+    ":count post|:count posts": ":count件の投稿",
+    ":count template section|:count template sections": ":count テンプレートセクション",
+    ":count word|:count words": ":countワード",
     ":distance km": ":distance km",
     ":distance miles": ":distanceマイル",
     ":file at line :line": ":file 行目 :line",
@@ -765,7 +765,7 @@
     "Rabbit": "うさぎ",
     "Ran": "ラン",
     "Rat": "ねずみ",
-    "Read :count time|Read :count times": ":count 回読み取り|:count 回読み取り",
+    "Read :count time|Read :count times": "読み取り回数 :count 回",
     "Record a loan": "ローンを記録する",
     "Record your mood": "気分を記録する",
     "Recovery Code": "リカバリーコード",
@@ -855,7 +855,7 @@
     "Sign in to your account": "アカウントにサインインする",
     "Sign up for an account": "アカウントにサインアップする",
     "Sikh": "シーク教",
-    "Slept :count hour|Slept :count hours": ":count 時間睡眠|:count 時間睡眠",
+    "Slept :count hour|Slept :count hours": "睡眠時間:count時間",
     "Slice of life": "人生のひとこま",
     "Slices of life": "人生の断片",
     "Small animal": "小動物",
