--- a/lang/ml.json
+++ b/lang/ml.json
@@ -854,7 +854,7 @@
     "Sign in to your account": "നിങ്ങളുടെ അക്കൗണ്ടിലേക്ക് സൈൻ ഇൻ ചെയ്യുക",
     "Sign up for an account": "ഒരു അക്കൗണ്ടിനായി സൈൻ അപ്പ് ചെയ്യുക",
     "Sikh": "സിഖ്",
-    "Slept :count hour|Slept :count hours": "ഉറങ്ങിയത് :count മണിക്കൂർ|ഉറങ്ങിയത് :count മണിക്കൂർ",
+    "Slept :count hour|Slept :count hours": ":count മണിക്കൂർ ഉറങ്ങി|:count മണിക്കൂർ ഉറങ്ങി",
     "Slice of life": "ജീവിതത്തിന്റെ കഷ്ണം",
     "Slices of life": "ജീവിതത്തിന്റെ കഷ്ണങ്ങൾ",
     "Small animal": "ചെറിയ മൃഗം",
