--- a/lang/nl.json
+++ b/lang/nl.json
@@ -24,11 +24,11 @@
     "+ prefix": "+ voorvoegsel",
     "+ pronoun": "+ voornaamwoord",
     "+ suffix": "+ achtervoegsel",
-    ":count contact|:count contacts": ":count contact|:count contacten",
+    ":count contact|:count contacts": ":count contactpersoon|:count contacten",
     ":count hour slept|:count hours slept": ":count uur geslapen|:count uur geslapen",
     ":count min read": ":count min leestijd",
     ":count post|:count posts": ":count bericht|:count berichten",
-    ":count template section|:count template sections": ":count sjabloonsectie|:count sjabloonsecties",
+    ":count template section|:count template sections": ":count sjabloongedeelte|:count sjabloonsecties",
     ":count word|:count words": ":count woord|:count woorden",
     ":distance km": ":distance kilometer",
     ":distance miles": ":distance mijl",
@@ -765,7 +765,7 @@
     "Rabbit": "Konijn",
     "Ran": "Liep",
     "Rat": "Rat",
-    "Read :count time|Read :count times": "Lees :count keer|Lees :count keer",
+    "Read :count time|Read :count times": ":count keer lezen|:count keer lezen",
     "Record a loan": "Registreer een lening",
     "Record your mood": "Registreer uw humeur",
     "Recovery Code": "Herstel code",
@@ -855,7 +855,7 @@
     "Sign in to your account": "Log in op uw account",
     "Sign up for an account": "Meld u aan voor een account",
     "Sikh": "Sikh",
-    "Slept :count hour|Slept :count hours": "Ik heb :count uur geslapen|Ik heb :count uur geslapen",
+    "Slept :count hour|Slept :count hours": ":count uur geslapen|:count uur geslapen",
     "Slice of life": "Deel van het leven",
     "Slices of life": "Plakjes leven",
     "Small animal": "Klein dier",
