--- a/lang/nn.json
+++ b/lang/nn.json
@@ -25,7 +25,7 @@
     "+ pronoun": "+ pronomen",
     "+ suffix": "+ suffiks",
     ":count contact|:count contacts": ":count kontakt|:count kontakter",
-    ":count hour slept|:count hours slept": ":count timers søvn|:count timers søvn",
+    ":count hour slept|:count hours slept": ":count time sov|:count timer sov",
     ":count min read": ":count min lest",
     ":count post|:count posts": ":count innlegg|:count innlegg",
     ":count template section|:count template sections": ":count malseksjon|:count malseksjoner",
