--- a/lang/pa.json
+++ b/lang/pa.json
@@ -25,10 +25,10 @@
     "+ pronoun": "+ ਸਰਵਣ",
     "+ suffix": "+ ਪਿਛੇਤਰ",
     ":count contact|:count contacts": ":count ਸੰਪਰਕ|:count ਸੰਪਰਕ",
-    ":count hour slept|:count hours slept": ":count ਘੰਟੇ ਦੀ ਨੀਂਦ|:count ਘੰਟੇ ਸੌਂ ਗਈ",
+    ":count hour slept|:count hours slept": ":count ਘੰਟਾ ਸੌਂ ਗਿਆ|:count ਘੰਟੇ ਸੌਂ ਗਏ",
     ":count min read": ":count ਮਿੰਟ ਪੜ੍ਹਿਆ ਗਿਆ",
     ":count post|:count posts": ":count ਪੋਸਟ|:count ਪੋਸਟਾਂ",
-    ":count template section|:count template sections": ":count ਟੈਂਪਲੇਟ ਸੈਕਸ਼ਨ|:count ਟੈਂਪਲੇਟ ਸੈਕਸ਼ਨ",
+    ":count template section|:count template sections": ":count ਟੈਮਪਲੇਟ ਸੈਕਸ਼ਨ|:count ਟੈਮਪਲੇਟ ਸੈਕਸ਼ਨ",
     ":count word|:count words": ":count ਸ਼ਬਦ|:count ਸ਼ਬਦ",
     ":distance km": ":distance ਕਿ.ਮੀ",
     ":distance miles": ":distance ਮੀਲ",
@@ -854,7 +854,7 @@
     "Sign in to your account": "ਆਪਣੇ ਖਾਤੇ ਵਿੱਚ ਸਾਈਨ ਇਨ ਕਰੋ",
     "Sign up for an account": "ਇੱਕ ਖਾਤੇ ਲਈ ਸਾਈਨ ਅੱਪ ਕਰੋ",
     "Sikh": "ਸਿੱਖ",
-    "Slept :count hour|Slept :count hours": ":count ਘੰਟੇ ਦੀ ਨੀਂਦ | :count ਘੰਟੇ ਸੌਂ ਗਈ",
+    "Slept :count hour|Slept :count hours": ":count ਘੰਟਾ ਸੁੱਤਾ|:count ਘੰਟੇ ਸੌਂ ਗਏ",
     "Slice of life": "ਜਿੰਦਗੀ ਦਾ ਹਿੱਸਾ",
     "Slices of life": "ਜੀਵਨ ਦੇ ਟੁਕੜੇ",
     "Small animal": "ਛੋਟਾ ਜਾਨਵਰ",
