--- a/lang/pl.json
+++ b/lang/pl.json
@@ -24,12 +24,12 @@
     "+ prefix": "+ przedrostek",
     "+ pronoun": "+ zaimek",
     "+ suffix": "+ przyrostek",
-    ":count contact|:count contacts": ":count kontakt|:count kontakty",
-    ":count hour slept|:count hours slept": ":count godzin snu|:count godzin snu",
+    ":count contact|:count contacts": ":count kontakt|:count kontakty|:count kontaktów",
+    ":count hour slept|:count hours slept": ":count godzina snu|:count godziny spania|:count godzin snu",
     ":count min read": ":count min czytania",
-    ":count post|:count posts": ":count post|:count postów",
-    ":count template section|:count template sections": ":count sekcja szablonu|:count sekcje szablonu",
-    ":count word|:count words": ":count słowo|:count słów",
+    ":count post|:count posts": ":count post|:count posty|:count postów",
+    ":count template section|:count template sections": ":count sekcja szablonu|:count sekcje szablonów|:count sekcji szablonów",
+    ":count word|:count words": ":count słowo|:count słowa|:count słów",
     ":distance km": ":distance km",
     ":distance miles": ":distance mil",
     ":file at line :line": ":file na linii :line",
@@ -765,7 +765,7 @@
     "Rabbit": "Królik",
     "Ran": "Biegł",
     "Rat": "Szczur",
-    "Read :count time|Read :count times": "Przeczytaj :count raz|Przeczytaj :count razy",
+    "Read :count time|Read :count times": "Przeczytaj :count raz|Przeczytaj :count razy|Przeczytaj :count razy",
     "Record a loan": "Nagraj pożyczkę",
     "Record your mood": "Zapisz swój nastrój",
     "Recovery Code": "Kod odzyskiwania",
@@ -855,7 +855,7 @@
     "Sign in to your account": "Zaloguj się",
     "Sign up for an account": "Zaloguj się na konto",
     "Sikh": "Sikh",
-    "Slept :count hour|Slept :count hours": "Spałem :count godz.|Spałem :count godz",
+    "Slept :count hour|Slept :count hours": "Spałem :count godzinę|Spałem :count godziny|Spałem :count godzin",
     "Slice of life": "Okruchy życia",
     "Slices of life": "Kawałki życia",
     "Small animal": "Małe zwierzę",
