--- a/lang/pt.json
+++ b/lang/pt.json
@@ -25,7 +25,7 @@
     "+ pronoun": "+ pronome",
     "+ suffix": "+ sufixo",
     ":count contact|:count contacts": ":count contato|:count contatos",
-    ":count hour slept|:count hours slept": ":count horas dormidas|:count horas dormidas",
+    ":count hour slept|:count hours slept": ":count hora dormi|:count horas dormidas",
     ":count min read": ":count minutos de leitura",
     ":count post|:count posts": ":count postagem|:count postagens",
     ":count template section|:count template sections": ":count seção de modelo|:count seções de modelo",
@@ -855,7 +855,7 @@
     "Sign in to your account": "Faça login em sua conta",
     "Sign up for an account": "Inscreva-se pra uma conta",
     "Sikh": "Sikh",
-    "Slept :count hour|Slept :count hours": "Dormi :count hora | Dormi :count horas",
+    "Slept :count hour|Slept :count hours": "Dormi :count hora|Dormi :count horas",
     "Slice of life": "Fatia de vida",
     "Slices of life": "Fatias de vida",
     "Small animal": "Animal pequeno",
