--- a/lang/ro.json
+++ b/lang/ro.json
@@ -24,12 +24,12 @@
     "+ prefix": "+ prefix",
     "+ pronoun": "+ pronume",
     "+ suffix": "+ sufix",
-    ":count contact|:count contacts": ":count contact|:count persoane de contact",
-    ":count hour slept|:count hours slept": ":count oră de dormit|:count ore de somn",
+    ":count contact|:count contacts": ":count contact|:count contacte|:count de contacte",
+    ":count hour slept|:count hours slept": ":count ora de somn|:count ore dormit|:count de ore de somn",
     ":count min read": ":count minute de citit",
-    ":count post|:count posts": ":count postare|:count postări",
-    ":count template section|:count template sections": ":count secțiune de șablon|:count secțiuni de șablon",
-    ":count word|:count words": ":count cuvânt|:count cuvinte",
+    ":count post|:count posts": ":count mesaj|:count postări|:count de postări",
+    ":count template section|:count template sections": ":count secțiune de șablon|:count secțiuni de șablon|:count de secțiuni de șablon",
+    ":count word|:count words": ":count cuvânt|:count cuvinte|:count de cuvinte",
     ":distance km": ":distance km",
     ":distance miles": ":distance mile",
     ":file at line :line": ":file la linia :line",
@@ -385,8 +385,8 @@
     "Drank": "A băut",
     "Drove": "A condus",
     "Due and upcoming tasks": "Sarcini scadente și viitoare",
-    "Edit": "Editați | ×",
-    "edit": "Editați | ×",
+    "Edit": "Editați | ×| ×",
+    "edit": "Editați | ×| ×",
     "Edit a contact": "Editați un contact",
     "Edit a journal": "Editați un jurnal",
     "Edit a post": "Editați o postare",
@@ -765,7 +765,7 @@
     "Rabbit": "Iepure",
     "Ran": "A fugit",
     "Rat": "Şobolan",
-    "Read :count time|Read :count times": "Citiți :count timp|Citiți :count ori",
+    "Read :count time|Read :count times": "Citiți :count dată|Citit de :count ori|Citește de :count de ori",
     "Record a loan": "Înregistrați un împrumut",
     "Record your mood": "Înregistrați-vă starea de spirit",
     "Recovery Code": "Cod de recuperare",
@@ -855,7 +855,7 @@
     "Sign in to your account": "Conectați-vă la contul dvs",
     "Sign up for an account": "Înscrieți-vă pentru un cont",
     "Sikh": "Sikh",
-    "Slept :count hour|Slept :count hours": "Am dormit :count oră|Am dormit :count ore",
+    "Slept :count hour|Slept :count hours": "A dormit :count ora|Am dormit :count ore|A dormit :count de ore",
     "Slice of life": "O felie de viață",
     "Slices of life": "Bucuri de viață",
     "Small animal": "Animal mic",
