--- a/lang/ru.json
+++ b/lang/ru.json
@@ -24,12 +24,12 @@
     "+ prefix": "+ префикс",
     "+ pronoun": "+ местоимение",
     "+ suffix": "+ суффикс",
-    ":count contact|:count contacts": ":count контакт|:count контакты",
-    ":count hour slept|:count hours slept": ":count час сна|:count часов сна",
+    ":count contact|:count contacts": ":count контакт|:count контакта|:count контактов",
+    ":count hour slept|:count hours slept": ":count час спал|:count часа спал|:count часов спал",
     ":count min read": ":count минута чтения",
-    ":count post|:count posts": ":count сообщение|:count сообщений",
-    ":count template section|:count template sections": ":count раздел шаблона|:count разделы шаблона",
-    ":count word|:count words": ":count слово|:count слов",
+    ":count post|:count posts": ":count сообщение|:count сообщения|:count сообщений",
+    ":count template section|:count template sections": ":count раздел шаблона|:count раздела шаблонов|:count разделов шаблонов",
+    ":count word|:count words": ":count слово|:count слова|:count слов",
     ":distance km": ":distance км",
     ":distance miles": ":distance миль",
     ":file at line :line": ":file в строке :line",
@@ -765,7 +765,7 @@
     "Rabbit": "Кролик",
     "Ran": "Ран",
     "Rat": "Крыса",
-    "Read :count time|Read :count times": "Прочитать :count раз|Прочитать :count раз",
+    "Read :count time|Read :count times": "Читать :count раз|Прочтите :count раза|Прочесть :count раз",
     "Record a loan": "Записать кредит",
     "Record your mood": "Запишите свое настроение",
     "Recovery Code": "Код восстановления",
@@ -855,7 +855,7 @@
     "Sign in to your account": "Войдите в свой аккаунт",
     "Sign up for an account": "Зарегистрируйте аккаунт",
     "Sikh": "сикх",
-    "Slept :count hour|Slept :count hours": "Спал :count час|Спал :count часов",
+    "Slept :count hour|Slept :count hours": "Спал :count час|Спал :count часа|Спал :count часов",
     "Slice of life": "Кусочек жизни",
     "Slices of life": "Кусочки жизни",
     "Small animal": "Маленькое животное",
