--- a/lang/sv.json
+++ b/lang/sv.json
@@ -765,7 +765,7 @@
     "Rabbit": "Kanin",
     "Ran": "Sprang",
     "Rat": "Råtta",
-    "Read :count time|Read :count times": "Läs :count gånger|Läs :count gånger",
+    "Read :count time|Read :count times": "Läs :count gång|Läs :count gånger",
     "Record a loan": "Spela in ett lån",
     "Record your mood": "Registrera ditt humör",
     "Recovery Code": "Återställningskod",
