--- a/lang/te.json
+++ b/lang/te.json
@@ -25,7 +25,7 @@
     "+ pronoun": "+ సర్వనామం",
     "+ suffix": "+ ప్రత్యయం",
     ":count contact|:count contacts": ":count పరిచయం|:count పరిచయాలు",
-    ":count hour slept|:count hours slept": ":count గంట నిద్రించారు|:count గంటలు నిద్రపోయారు",
+    ":count hour slept|:count hours slept": ":count గంట నిద్రపోయాడు|:count గంటలు నిద్రపోయారు",
     ":count min read": ":count నిమి చదవబడింది",
     ":count post|:count posts": ":count పోస్ట్|:count పోస్ట్‌లు",
     ":count template section|:count template sections": ":count టెంప్లేట్ విభాగం|:count టెంప్లేట్ విభాగాలు",
@@ -854,7 +854,7 @@
     "Sign in to your account": "మీ ఖాతాకు సైన్ ఇన్ చేయండి",
     "Sign up for an account": "ఖాతా కోసం సైన్ అప్ చేయండి",
     "Sikh": "సిక్కు",
-    "Slept :count hour|Slept :count hours": "నిద్ర :count గంట|నిద్ర :count గంటలు",
+    "Slept :count hour|Slept :count hours": ":count గంట పడుకున్నారు|:count గంటలు నిద్రపోయారు",
     "Slice of life": "జీవితపు ముక్క",
     "Slices of life": "జీవితం యొక్క ముక్కలు",
     "Small animal": "చిన్న జంతువు",
