--- a/lang/tr.json
+++ b/lang/tr.json
@@ -24,12 +24,12 @@
     "+ prefix": "+ önek",
     "+ pronoun": "+ zamir",
     "+ suffix": "+ sonek",
-    ":count contact|:count contacts": ":count kişi|:count kişi",
-    ":count hour slept|:count hours slept": ":count saat uyudum|:count saat uyudum",
+    ":count contact|:count contacts": ":count kişi",
+    ":count hour slept|:count hours slept": ":count saat uyudum",
     ":count min read": ":count dk. okuma",
-    ":count post|:count posts": ":count gönderi|:count gönderi",
-    ":count template section|:count template sections": ":count şablon bölümü|:count şablon bölümü",
-    ":count word|:count words": ":count kelime|:count kelime",
+    ":count post|:count posts": ":count gönderi",
+    ":count template section|:count template sections": ":count şablon bölümü",
+    ":count word|:count words": ":count kelime",
     ":distance km": ":distance km",
     ":distance miles": ":distance mil",
     ":file at line :line": ":line satırında :file",
@@ -765,7 +765,7 @@
     "Rabbit": "Tavşan",
     "Ran": "Koştu",
     "Rat": "Fare",
-    "Read :count time|Read :count times": ":count kez okuyun|:count kez okuyun",
+    "Read :count time|Read :count times": ":count kez oku",
     "Record a loan": "Kredi kaydetme",
     "Record your mood": "Ruh halinizi kaydedin",
     "Recovery Code": "Kurtarma kodu",
@@ -855,7 +855,7 @@
     "Sign in to your account": "hesabınıza giriş yapın",
     "Sign up for an account": "Bir hesap için kaydolun",
     "Sikh": "Sih",
-    "Slept :count hour|Slept :count hours": ":count saat uyudum|:count saat uyudum",
+    "Slept :count hour|Slept :count hours": ":count saat uyudum",
     "Slice of life": "Hayattan bir parça",
     "Slices of life": "Hayatın dilimleri",
     "Small animal": "Küçük hayvan",
