--- a/lang/ur.json
+++ b/lang/ur.json
@@ -25,10 +25,10 @@
     "+ pronoun": "+ ضمیر",
     "+ suffix": "+ لاحقہ",
     ":count contact|:count contacts": ":count رابطہ|:count رابطے",
-    ":count hour slept|:count hours slept": ":count گھنٹہ سویا|:count گھنٹے سویا۔",
+    ":count hour slept|:count hours slept": ":count گھنٹہ سو گیا۔|:count گھنٹے سوتے تھے۔",
     ":count min read": ":count منٹ پڑھا۔",
     ":count post|:count posts": ":count پوسٹ|:count پوسٹس",
-    ":count template section|:count template sections": ":count ٹیمپلیٹ سیکشن|:count ٹیمپلیٹ سیکشن",
+    ":count template section|:count template sections": ":count ٹیمپلیٹ سیکشن|:count ٹیمپلیٹ سیکشنز",
     ":count word|:count words": ":count لفظ|:count الفاظ",
     ":distance km": ":distance کلومیٹر",
     ":distance miles": ":distance میل",
@@ -855,7 +855,7 @@
     "Sign in to your account": "اپنے اکاؤنٹ میں سائن ان کریں۔",
     "Sign up for an account": "ایک اکاؤنٹ کے لیے سائن اپ کریں۔",
     "Sikh": "سکھ",
-    "Slept :count hour|Slept :count hours": "سویا :count گھنٹے|سویا :count گھنٹے",
+    "Slept :count hour|Slept :count hours": ":count گھنٹہ سویا۔|:count گھنٹے سوئے۔",
     "Slice of life": "زندگی کا ٹکڑا",
     "Slices of life": "زندگی کے ٹکڑے",
     "Small animal": "چھوٹا جانور",
