--- a/lang/vi.json
+++ b/lang/vi.json
@@ -24,12 +24,12 @@
     "+ prefix": "+ tiền tố",
     "+ pronoun": "+ đại từ",
     "+ suffix": "+ hậu tố",
-    ":count contact|:count contacts": ":count liên hệ|:count liên hệ",
-    ":count hour slept|:count hours slept": "đã ngủ :count giờ|:count giờ đã ngủ",
+    ":count contact|:count contacts": ":count liên hệ",
+    ":count hour slept|:count hours slept": "ngủ :count tiếng",
     ":count min read": ":count phút đọc",
-    ":count post|:count posts": ":count bài đăng|:count bài đăng",
-    ":count template section|:count template sections": ":count phần mẫu|:count phần mẫu",
-    ":count word|:count words": ":count từ|:count từ",
+    ":count post|:count posts": ":count bài đăng",
+    ":count template section|:count template sections": ":count phần mẫu",
+    ":count word|:count words": ":count từ",
     ":distance km": ":distance km",
     ":distance miles": ":distance dặm",
     ":file at line :line": ":file tại dòng :line",
@@ -765,7 +765,7 @@
     "Rabbit": "Con thỏ",
     "Ran": "Đã chạy",
     "Rat": "Con chuột",
-    "Read :count time|Read :count times": "Đọc :count lần|Đọc :count lần",
+    "Read :count time|Read :count times": "Đọc :count lần",
     "Record a loan": "Ghi lại khoản vay",
     "Record your mood": "Ghi lại tâm trạng của bạn",
     "Recovery Code": "Mã khôi phục",
@@ -855,7 +855,7 @@
     "Sign in to your account": "đăng nhập vào tài khoản của bạn",
     "Sign up for an account": "Đăng kí một tài khoản",
     "Sikh": "đạo Sikh",
-    "Slept :count hour|Slept :count hours": "Đã ngủ :count giờ|Đã ngủ :count giờ",
+    "Slept :count hour|Slept :count hours": "Ngủ :count tiếng",
     "Slice of life": "Khia cạnh cuộc sống",
     "Slices of life": "Những lát cắt cuộc sống",
     "Small animal": "Con thú nhỏ",
