--- a/lang/zh-CN.json
+++ b/lang/zh-CN.json
@@ -24,12 +24,12 @@
     "+ prefix": "+ 前缀",
     "+ pronoun": "+ 代词",
     "+ suffix": "+ 后缀",
-    ":count contact|:count contacts": ":count 联系人|:count 联系人",
-    ":count hour slept|:count hours slept": "已睡 :count 小时|:count 小时已睡",
+    ":count contact|:count contacts": ":count 联系人",
+    ":count hour slept|:count hours slept": "睡了 :count 小时",
     ":count min read": "阅读时间为 :count 分钟",
-    ":count post|:count posts": ":count 条帖子|:count 条帖子",
-    ":count template section|:count template sections": ":count 模板部分|:count 模板部分",
-    ":count word|:count words": ":count 个字|:count 个字",
+    ":count post|:count posts": ":count 条帖子",
+    ":count template section|:count template sections": ":count 模板部分",
+    ":count word|:count words": ":count 字",
     ":distance km": ":distance 公里",
     ":distance miles": ":distance 英里",
     ":file at line :line": ":file 在第 :line 行",
@@ -763,7 +763,7 @@
     "Rabbit": "兔子",
     "Ran": "然",
     "Rat": "鼠",
-    "Read :count time|Read :count times": "阅读 :count 次|阅读 :count 次",
+    "Read :count time|Read :count times": "阅读 :count 次",
     "Record a loan": "记录贷款",
     "Record your mood": "记录你的心情",
     "Recovery Code": "恢复代码",
@@ -853,7 +853,7 @@
     "Sign in to your account": "登录到您的帐户",
     "Sign up for an account": "注册新账号",
     "Sikh": "锡克教",
-    "Slept :count hour|Slept :count hours": "睡了 :count 小时|睡了 :count 小时",
+    "Slept :count hour|Slept :count hours": "睡了 :count 小时",
     "Slice of life": "生活的片段",
     "Slices of life": "生活片段",
     "Small animal": "小动物",
