--- a/lang/zh-TW.json
+++ b/lang/zh-TW.json
@@ -24,12 +24,12 @@
     "+ prefix": "+ 前綴",
     "+ pronoun": "+ 代名詞",
     "+ suffix": "+ 後綴",
-    ":count contact|:count contacts": ":count 聯絡人|:count 聯絡人",
-    ":count hour slept|:count hours slept": "已睡 :count 小時|:count 小時已睡",
+    ":count contact|:count contacts": ":count 聯絡人",
+    ":count hour slept|:count hours slept": "睡了 :count 小時",
     ":count min read": "閱讀時間為 :count 分鐘",
-    ":count post|:count posts": ":count 篇帖子|:count 篇帖子",
-    ":count template section|:count template sections": ":count 範本部分|:count 範本部分",
-    ":count word|:count words": ":count 字|:count 個字",
+    ":count post|:count posts": ":count 則貼文",
+    ":count template section|:count template sections": ":count 模板部分",
+    ":count word|:count words": ":count 字",
     ":distance km": ":distance 公里",
     ":distance miles": ":distance 英里",
     ":file at line :line": ":file 在第 :line 行",
@@ -763,7 +763,7 @@
     "Rabbit": "兔子",
     "Ran": "然",
     "Rat": "鼠",
-    "Read :count time|Read :count times": "閱讀 :count 次|閱讀 :count 次",
+    "Read :count time|Read :count times": "閱讀 :count 次",
     "Record a loan": "記錄貸款",
     "Record your mood": "記錄你的心情",
     "Recovery Code": "恢復程式碼",
@@ -853,7 +853,7 @@
     "Sign in to your account": "登入您的帳戶",
     "Sign up for an account": "註冊新帳號",
     "Sikh": "錫克教",
-    "Slept :count hour|Slept :count hours": "睡了 :count 小時|睡了 :count 小時",
+    "Slept :count hour|Slept :count hours": "睡了 :count 小時",
     "Slice of life": "生活的片段",
     "Slices of life": "生活片段",
     "Small animal": "小動物",
