--- a/lang/hi.json
+++ b/lang/hi.json
@@ -24,11 +24,11 @@
     "+ prefix": "+ उपसर्ग",
     "+ pronoun": "+ सर्वनाम",
     "+ suffix": "+ प्रत्यय",
-    ":count contact|:count contacts": ":count संपर्क|:count संपर्क",
-    ":count hour slept|:count hours slept": ":count घंटे सोया|:count घंटे सोया",
+    ":count contact|:count contacts": ":count संपर्क करें|:count संपर्क",
+    ":count hour slept|:count hours slept": ":count घंटा सोया|:count घंटे सोया",
     ":count min read": ":count मिनट पढ़ा",
     ":count post|:count posts": ":count पोस्ट|:count पोस्ट",
-    ":count template section|:count template sections": ":count टेम्प्लेट अनुभाग|:count टेम्प्लेट अनुभाग",
+    ":count template section|:count template sections": ":count टेम्पलेट अनुभाग|:count टेम्पलेट अनुभाग",
     ":count word|:count words": ":count शब्द|:count शब्द",
     ":distance km": ":distance किमी",
     ":distance miles": ":distance मील",
@@ -855,7 +855,7 @@
     "Sign in to your account": "अपने अकाउंट में साइन इन करें",
     "Sign up for an account": "एक खाते के लिए साइन अप करें",
     "Sikh": "सिख",
-    "Slept :count hour|Slept :count hours": ":count घंटे सोये|:count घंटे सोये",
+    "Slept :count hour|Slept :count hours": ":count घंटा सोया|:count घंटे सोया",
     "Slice of life": "जीवन का हिस्सा",
     "Slices of life": "जीवन के टुकड़े",
     "Small animal": "छोटा जानवर",
